--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
     depends_on:
-      - redis
+      - auth-center-redis
     networks:
       - agent-net
       - auth-center-net
