--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ uvicorn[standard]>=0.27,<1.0
 # Database ORM (SQLAlchemy 2.x)
 SQLAlchemy>=2.0,<3.0
 greenlet>=3.3,<4.0
-psycopg>=3.1,<4.0
+psycopg==3.2.9
+psycopg-binary==3.2.9
 
 # Data validation
 pydantic>=2.5,<3.0
